Fix alignment for items in section 2

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,6 @@ body {
 .top-section-left, .top-section-right {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     justify-content: space-between;
     gap: 48px;
     padding-bottom: 48px;
@@ -49,8 +48,8 @@ button {
     background-color: #3882f6;
     color: #f9faf8;
     font-size: 18px;
-    width: 100px;
-    height: 36px;
+    width: 110px;
+    height: 32px;
     border: none;
     border-radius: 4px;
 }
@@ -65,8 +64,6 @@ a {
     color: #e5e7eb;
     text-decoration: none;
 }
-
-/*** Section 2 ***/
 
 .main-text {
     color: #f9faf8;
@@ -88,7 +85,7 @@ a {
     background-color: slategray;
 }
 
-/*** Section 3 ***/
+/*** Section 2 ***/
 
 .info-section {
     background-color: #ffffff;
@@ -104,10 +101,21 @@ a {
     font-weight: extra-bold;
 }
 
-.container {
+.fig-container {
     display: flex;
-    justify-content: center;
-    gap: 48px;
+    flex-wrap: wrap;
+    justify-content: center;   
+}
+
+figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #1f2937;
+    margin: 20px;
+    padding-bottom: 96px;
+    width: 150px;
+    text-align: center;
 }
 
 .image-box {
@@ -118,18 +126,7 @@ a {
     border: solid 2px #3882f6;
 }
 
-.figure {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-width: 150px;
-    min-height: 150px;
-    max-width: 150px;
-    max-height: auto;
-    text-align: center;
-}
-
-/*** Section 4 ***/
+/*** Section 3 ***/
 
 .quotes-section {
     background-color: #e5e7eb;
@@ -142,6 +139,8 @@ a {
     text-align: left;
     padding: 60px 160px;
 }
+
+/*** Section 4 ***/
 
 .bottom-section {
     background-color: #ffffff;
